<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorWhite"
        tools:context=".DashboardActivity">

        <Button
            android:id="@+id/buttonHistory"
            style="@android:style/Widget.Button"
            android:layout_width="129dp"
            android:layout_height="89dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="44dp"
            android:text="@string/History"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/buttonProgress"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="209dp"
            android:layout_height="118dp"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:text="@string/Welcome_Back"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Username"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <Button
            android:id="@+id/buttonProgress"
            style="@android:style/Widget.Button"
            android:layout_width="129dp"
            android:layout_height="89dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="44dp"
            android:text="@string/Progress"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/buttonHistory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="133dp"
            android:text="@string/CurrentTracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonHistory" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/CYCTT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trackify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

<!--        <ImageView-->
<!--            android:id="@+id/imageProfile"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginBottom="38dp"-->
<!--            android:contentDescription="@string/Username"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/buttonHistory"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toEndOf="@+id/tvTitle"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.0"-->
<!--            tools:src="@drawable/ic_profile"-->
<!--            android:background="@color/colorWhite" />-->

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Username"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PIBNTSIP"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/searchOriginId"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Add"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
